--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
-        "react": "^18.2.0",
+        "react": "^18.3.1",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.4.17",
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "react-icons": "^5.5.0",
         "react-router-dom": "^7.5.1"
     }
 }
