--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "react-icons": "^5.5.0",
-        "react-router-dom": "^7.5.1"
+        "react-router-dom": "^7.5.1",
+        "tailwind-scrollbar-hide": "^2.0.0"
     }
 }
