--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.5.1",
+        "sweetalert2": "^11.21.2",
         "tailwind-scrollbar-hide": "^2.0.0"
     }
 }
