--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.8.2",
         "react-icons": "^5.5.0",
+        "react-redux": "^9.2.0",
         "react-router-dom": "^7.5.1",
+        "redux-persist": "^6.0.0",
         "sweetalert2": "^11.21.2",
         "tailwind-scrollbar-hide": "^2.0.0"
     }
